# pdfgen-juanipis

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  compare.py  demo_report.py  fonts.conf  pagination.py  pyproject.toml  real_boletin.py  render.py  requirements.txt  stress_harness.py
.github/workflows/: auto-release.yml  ci.yml  publish.yml  release.yml
examples/: demo.yaml  minimal.json  minimal.yaml
notebooks/: advanced.ipynb  bytes.ipynb  demo.ipynb  notes.md  usage.ipynb
scripts/: compare.py  demo_report.py  make_demo.sh  real_boletin.py  release_tools.py  run_all.py  stress_harness.py
src/pdfgen/: __init__.py  api.py  cli.py  render.py  schema.json  validator.py
src/pdfgen_juanipis/: __init__.py  api.py  cli.py  pagination.py  render.py  schema.json  validator.py
src/pdfgen_juanipis/templates/: boletin.css  boletin_template.html.jinja
template/: boletin.css  boletin_template.html.jinja
tests/: test_api.py  test_cli_fonts_conf.py  test_cli_stdout.py  test_cli_yaml.py  test_css_selectors.py  test_distribute_refs.py  test_html_rendering.py  test_pagination_smoke.py  test_refs_catalog.py  test_render_data.py  test_schema_validation.py  test_validator.py
