[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfgen-juanipis"
version = "0.1.5"
description = "HTML-to-PDF generator with pagination and validation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Juan Pablo Díaz Correa", email = "juanipis@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
license-files = ["LICENSE"]
dependencies = [
  "Jinja2==3.1.4",
  "WeasyPrint==59.0",
  "pydyf==0.10.0",
  "jsonschema==4.23.0",
  "PyYAML==6.0.2"
]

[project.urls]
Homepage = "https://github.com/Juanipis/pdfgen-juanipis"
Issues = "https://github.com/Juanipis/pdfgen-juanipis/issues"
Source = "https://github.com/Juanipis/pdfgen-juanipis"

[project.scripts]
pdfgen-juanipis = "pdfgen_juanipis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdfgen_juanipis = [
  "schema.json",
  "templates/*.css",
  "templates/*.jinja",
  "assets/fonts/*",
  "assets/*.png"
]
